--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "strapi",
+  "name": "apiku",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Api application",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -11,22 +11,22 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "0.21.18",
-    "pg": "^8.6.0",
-    "strapi": "3.6.2",
-    "strapi-admin": "3.6.2",
-    "strapi-connector-bookshelf": "3.6.2",
-    "strapi-plugin-content-manager": "3.6.2",
-    "strapi-plugin-content-type-builder": "3.6.2",
-    "strapi-plugin-email": "3.6.2",
-    "strapi-plugin-i18n": "3.6.2",
-    "strapi-plugin-upload": "3.6.2",
-    "strapi-plugin-users-permissions": "3.6.2",
-    "strapi-provider-upload-cloudinary": "^3.6.2",
-    "strapi-utils": "3.6.2"
+    "knex": "0.95.10",
+    "pg": "^8.7.1",
+    "strapi": "3.6.8",
+    "strapi-admin": "3.6.8",
+    "strapi-connector-bookshelf": "3.6.8",
+    "strapi-plugin-content-manager": "3.6.8",
+    "strapi-plugin-content-type-builder": "3.6.8",
+    "strapi-plugin-email": "3.6.8",
+    "strapi-plugin-i18n": "3.6.8",
+    "strapi-plugin-upload": "3.6.8",
+    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-provider-upload-cloudinary": "^3.6.8",
+    "strapi-utils": "3.6.8"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Abraham Yusuf"
   },
   "strapi": {
     "uuid": "4429591a-1258-4c86-bb9d-98a9dbd0eb1d"
